Fixed Multi-Message Spacing

--- a/discorddark.css
+++ b/discorddark.css
@@ -246,7 +246,6 @@ h2.name-3l27Hl, h2.membersGroup-v9BXpm, .name-3l27Hl .overflow-WK9Ogt {
 }
 .message-2qnXI6:not(.groupStart-23k01U), .message-2qnXI6:hover:not(.groupStart-23k01U) {
 	padding-top: 0px!important;
-	padding-bottom: .5rem!important;
 	transform: translateY(-.5rem);
 }
 .tabBarItem-3dfX8P, .tabBarItem-3dfX8P:hover {
